Add secrets crud to API
